@@ -1,5 +1,9 @@
 CruiseControl Release Notes - Latest CVS
 
+Project
+----------------------
+* On a new project (no serialized project found) force a build. This is to aid setting up CruiseControl as you will not need to wait for a modification.
+
 ModificationSet
 ----------------------
 * Fixed bogus "A modification was detected in the future" message
